# Vllama

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test.py
.github/ISSUE_TEMPLATE/: bug_report.md
vllama/: __init__.py  cli.py  core.py  model_training.py  preprocess.py  remote.py  test.py
vllama/functions/: image_to_3d.py
vllama/functions/image3d/: image3dRemote.py
vllama/functions/object_detection_video/: object_detection_video.py
vllama/functions/viewer3d/: viewer3d.py
