[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllama"
version = "0.5.0"
description = "CLI tool to run local vision models like stabilityai/sd-turbo"
authors = [
  { name = "Gopu Manvith", email = "manvithgopu1394@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "torch>=2.0.0",
  "diffusers>=0.20.0",
  "transformers>=4.30.0",
  "accelerate>=0.20.0",
  "protobuf>=3.20.0",
  "kaggle>=1.5.0",
  "pandas>=1.5.0",
  "numpy>=1.23.0",
  "matplotlib>=3.5.0",
  "seaborn>=0.12.0",
  "scikit-learn>=1.2.0",
  "xgboost>=1.7.6",
  "lightgbm>=3.3.5",
  "catboost>=1.2.1",
  "joblib>=1.2.0",
]

[project.scripts]
vllama = "vllama.cli:main"
